# accounting-system

./: .gitignore  Makefile  alembic.ini  pyproject.toml
src/: admin.py  client.py
src/assets/db/: alembic.ini
src/core/config/: __init__.py  app.py
src/core/domain/dto/: __init__.py  paginated.py
src/core/domain/entities/: __init__.py  client.py  color.py  contractor.py  entity.py  invoice.py  material.py  metric.py  metric_code.py  order.py  product.py  size.py  stock.py  user.py  warehouse.py
src/core/domain/repositories/: __init__.py  user_repository.py
src/core/infrastructure/sqlite/: database.py
src/core/service/app/: __init__.py  base_entity_service.py  client_service.py  color_service.py  contractor_service.py  ientity_service.py  init_service.py  material_service.py  metric_service.py  product_service.py  size_service.py  user_service.py  warehouse_service.py
src/core/service/command/: __init__.py  base_commands.py  client_remove_command.py  color_remove_command.py  contractor_remove_command.py  icommand.py  init_command.py  ithreadcommand.py  material_remove_command.py  metric_remove_command.py  product_remove_command.py  (+3 more)
src/presentation/admin/: __init__.py
src/presentation/resources/: admin.qrc
src/shared/: colors.py
src/shared/components/: __init__.py  actions_button.py  common_actions_view.py  common_button.py  common_input.py  common_page.py  custom_dropdown.py  numeric_input.py  page_title.py  spacer.py  tab_button.py
src/shared/lib/: __init__.py  asset.py  cache.py  is_uuid.py  router.py  snack.py  toast.py  value_id.py
(+186 files in other folders)
