[project]
name = "accounting-system"
version = "0.1.0"
description = "Inventory accounting system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "appdirs>=1.4.4",
    "cryptography>=46.0.6",
    "pyside6>=6.11.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = []
